--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Trabajo grupal</h1>
+    <p>Este es un ejercicio grupal para JAP. Integrantes:</p>
+    <ul>
+        <li>Gimena Lema</li>
+        <li>Matias de la Bandera</li>
+        <li>Lucas Muniz</li>
+        <li>Marcos Garcia</li>
+        <li>Felipe Sosa</li>
+    </ul>
     
 </body>
 </html>
