--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./atributo.css">
     <title>Document</title>
+    <script src="./script.js"></script>
 </head>
 <body>
     <h1>Trabajo grupal</h1>
